ДЗ 3 задача 2(new)

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
 <body>
   <ul id="nav">
-    <li class="nav">Hoвости</li>
-    <li class="nav">События</li>
-    <li class="nav">О нас</li>
+    <li class="nav"><a>Hoвости</a></li>
+    <li class="nav"><a>События</a></li>
+    <li class="nav"><a>О нас</a></li>
   </ul>
   <h1>Lorem Ipsum</h1>
   <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
